frontend/test/should_fail/index_multiple_edge_fromto_argument2_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	if{ edgesFromIndexMultipleFromTo(Ei, 42, 42.0).size() > 0; }
	
	modify {
	}
}
